# AlloLib-AmbisonicsToBinaural

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini  main.cpp  run.sh
src/: main.cpp
src/audio/: AmbisonicReverbProcessor.hpp  ambisonicBinauralDecoder.hpp  ambisonicEncoder.hpp  headTrackingRotation.hpp  speakerLayout.hpp
